# Sync

./: .gitignore  README.md  Sync.hs  stack.yaml  sync.cabal  sync.hi
_darcs/: hashed_inventory  index  index.old  tentative_pristine
_darcs/inventories/: 0000000174-61a669c309c5ce181fbe110c2b32bb8bbb20bc93386fe1fc797d6e0bff4cab3a
_darcs/patches/: 0000008393-85ae8728ae1ac6fda4f6b68b38dc1154ce8d83d0a3837bf3f271a4934ba1783f
_darcs/prefs/: author
app/: Main.hs
src/: Sync.hs
